Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -170,9 +170,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixChar.svg&amp;filetimestamp=20240707203715&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixChar.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/de">Pr&auml;fixsymbol entfernen</a>: Entfernt alle Symbole am Anfang des Ma&szlig;textes.</li></ul>
 <ul><li><span id="TechDraw_ExtensionIncreaseDecreaseGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/de">Increase Decimal Places</a>: increases the number of decimal places of the dimension text.</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/de">Dezimalstellenanzahl erh&ouml;hen</a>: Erh&ouml;ht die Anzahl der Nachkommastellen der Ma&szlig;zahl.</li></ul></dd></dl>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDecreaseDecimal.svg&amp;filetimestamp=20241126181948&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/de">Dezimalstellenanzahl verringern</a>: verringert die Anzahl der Dezimalstellen der Ma&szlig;zahl.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDecreaseDecimal.svg&amp;filetimestamp=20241126181948&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/de">Dezimalstellenanzahl verringern</a>: verringert die Anzahl der Nachkommastellen der Ma&szlig;zahl.</li></ul>
 <p><span id="Annotations"></span>
 </p>
 <h3><span class="mw-headline" id="Beschriftung">Beschriftung</span></h3>
@@ -310,13 +308,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195533
+Cached time: 20260111195553
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.336 seconds
-Real time usage: 0.745 seconds
-Preprocessor visited node count: 875/1000000
+CPU time usage: 0.340 seconds
+Real time usage: 0.499 seconds
+Preprocessor visited node count: 874/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -326,18 +324,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.392      1 -total
- 23.70%    7.915      1 Template:TechDraw_Tools_navi/de
- 21.42%    7.152      2 Template:Docnav/de
- 16.99%    5.672      5 Template:VersionPlus/de
- 12.19%    4.071      2 Template:Navigation_menu_2
- 10.09%    3.369     25 Template:Version/de
-  9.12%    3.047      1 Template:KEY
-  6.62%    2.212      1 Template:Userdocnavi/de
-  5.77%    1.927      1 Template:TOCright
+100.00%   24.387      1 -total
+ 35.91%    8.757      1 Template:TechDraw_Tools_navi/de
+ 17.87%    4.358      2 Template:Navigation_menu_2
+ 12.29%    2.996      2 Template:Docnav/de
+ 11.40%    2.780     25 Template:Version/de
+  8.53%    2.081      5 Template:VersionPlus/de
+  8.53%    2.080      1 Template:Userdocnavi/de
+  6.94%    1.692      1 Template:TOCright
+  5.66%    1.380      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111195532 and revision id 1735934. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111195553 and revision id 1735938. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
