Created page with "Při této metodě lze prostřední tlačítko myši uvolnit poté, co je stisknuto pravé tlačítko myši."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -154,10 +154,8 @@
 </p>
 </td>
 <td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>With this method the middle mouse button may be released after the right mouse button is held pressed.
+<p>P&#345;i t&eacute;to metod&#283; lze prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i uvolnit pot&eacute;, co je stisknuto prav&eacute; tla&#269;&iacute;tko my&scaron;i.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Users who use the mouse with their right hand may find this method easier than the first method.
 </p>
@@ -1188,15 +1186,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195544
+Cached time: 20260111195616
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.318 seconds
-Real time usage: 0.676 seconds
-Preprocessor visited node count: 1674/1000000
-Post&#8208;expand include size: 78750/2097152 bytes
-Template argument size: 28551/2097152 bytes
+CPU time usage: 0.300 seconds
+Real time usage: 0.424 seconds
+Preprocessor visited node count: 1673/1000000
+Post&#8208;expand include size: 78700/2097152 bytes
+Template argument size: 28501/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1204,19 +1202,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  131.755      1 -total
-  9.17%   12.077      8 Template:ASCII
-  8.32%   10.963      1 Template:SolidWorks_Navigation
-  6.24%    8.216      1 Template:OpenSCAD_Navigation
-  6.09%    8.026      1 Template:SiemensNX_Navigation
-  5.94%    7.825      1 Template:TinkerCAD_Navigation
-  5.92%    7.800      1 Template:Userdocnavi/cs
-  5.51%    7.262     10 Template:MenuCommand
-  4.59%    6.043      1 Template:Blender_Navigation
-  4.34%    5.715      1 Template:Inventor_Navigation/cs
+100.00%   65.420      1 -total
+ 12.67%    8.291      8 Template:ASCII
+ 10.47%    6.852      1 Template:Userdocnavi/cs
+  6.43%    4.207      1 Template:OpenSCAD_Navigation
+  6.22%    4.068     78 Template:KEY
+  4.62%    3.025      1 Template:Blender_Navigation
+  4.61%    3.019      1 Template:Inventor_Navigation/cs
+  4.22%    2.764      1 Template:Touchpad_Navigation/cs
+  4.19%    2.742      1 Template:SolidWorks_Navigation
+  3.98%    2.604      1 Template:MayaGesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195543 and revision id 1735936. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195615 and revision id 1735940. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
