Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -163,7 +163,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueCoordDimension.svg&amp;filetimestamp=20240707202047&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateObliqueCoordDimension.html" title="TechDraw ExtensionCreateObliqueCoordDimension/de">Schr&auml;ge Koordinatenma&szlig;e</a>: Erstellt eine schr&auml;ge Stufenbema&szlig;ung, d.h. mehrere schr&auml;ge Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</li></ul>
 <ul><li><span id="TechDraw_ExtensionChamferDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChamferDimension.svg&amp;filetimestamp=20240706151737&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChamferDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChamferDimension.html" title="TechDraw ExtensionCreateHorizChamferDimension/de">Horizontales Ma&szlig; einer Fase</a>: Erstellt ein horizontales Ma&szlig; mit Winkelangabe f&uuml;r eine Fase.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChamferDimension.svg&amp;filetimestamp=20240706151746&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension/de">Vertikales Ma&szlig; einer Fase</a>: Erstellt ein vertikales Ma&szlig; mit Winkelangabe f&uuml;r eine Fase.</li></ul>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArc.svg&amp;filetimestamp=20240706145221&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/de">Bogenma&szlig;</a>: Erstellt ein Ma&szlig; f&uuml;r die (gestreckte) L&auml;nge eines Bogens.</li></ul></dd></dl>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArc.svg&amp;filetimestamp=20240706145221&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/de">Bogenma&szlig;</a>: Erstellt ein Ma&szlig; f&uuml;r die (gestreckte) L&auml;nge eines Bogens.</li></ul>
 <ul><li><span id="TechDraw_ExtensionInsertPrefixGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/de">'&#8960;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Durchmessersymbol (&#8960;) am Anfang des Ma&szlig;textes ein.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/de">'&#9633;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Vierkantsymbol (&#9633;) am Anfang des Ma&szlig;textes ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/de">Anzahl-Pr&auml;fix 'n&times;' einf&uuml;gen</a>: F&uuml;gt einen Multiplikator am Anfang des Ma&szlig;textes ein, der angibt, wie oft das zu diesem Ma&szlig; geh&ouml;rende Geometrieelement in der Ansicht vorkommt. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
@@ -308,12 +308,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195553
+Cached time: 20260111195620
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.340 seconds
-Real time usage: 0.499 seconds
+CPU time usage: 0.319 seconds
+Real time usage: 0.487 seconds
 Preprocessor visited node count: 874/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -324,18 +324,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.387      1 -total
- 35.91%    8.757      1 Template:TechDraw_Tools_navi/de
- 17.87%    4.358      2 Template:Navigation_menu_2
- 12.29%    2.996      2 Template:Docnav/de
- 11.40%    2.780     25 Template:Version/de
-  8.53%    2.081      5 Template:VersionPlus/de
-  8.53%    2.080      1 Template:Userdocnavi/de
-  6.94%    1.692      1 Template:TOCright
-  5.66%    1.380      1 Template:KEY
+100.00%   25.323      1 -total
+ 29.77%    7.538      1 Template:TechDraw_Tools_navi/de
+ 16.07%    4.070      2 Template:Navigation_menu_2
+ 15.24%    3.860      1 Template:Userdocnavi/de
+ 11.80%    2.987      2 Template:Docnav/de
+ 10.18%    2.577     25 Template:Version/de
+  8.70%    2.202      5 Template:VersionPlus/de
+  7.18%    1.817      1 Template:TOCright
+  5.76%    1.459      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111195553 and revision id 1735938. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111195620 and revision id 1735942. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
