--- a/wiki/de/TechDraw_2LineCenterLine.html
+++ b/wiki/de/TechDraw_2LineCenterLine.html
@@ -62,15 +62,13 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Zwei Kanten in einer Ansicht ausw&auml;hlen. Die Kanten sollten mehr oder weniger parallel sein.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Mittellinie zwischen 2 Linien hinzuf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Mittellinie zwischen 2 Linien hinzuf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
-<li>Ein Aufgaben-Bereich wird ge&ouml;ffnet. Siehe <a href="../de/TechDraw_FaceCenterLine.html#Optionen" title="TechDraw FaceCenterLine/de">TechDraw Fl&auml;chenMittellinie</a> f&uuml;r weitere Informationen.</li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Mittellinie zwischen 2 Linien</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Mittellinie zwischen 2 Linien</b> ausw&auml;hlen.</li></ul></li>
+<li>Das Aufgaben-Fenster wird ge&ouml;ffnet. Siehe <a href="../de/TechDraw_FaceCenterLine.html#Options" title="TechDraw FaceCenterLine/de">TechDraw Fl&auml;chenMittellinie</a> f&uuml;r weitere Informationen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> zum Best&auml;tigen dr&uuml;cken.</li>
 <li>Eine Mittellinie wird zwischen den ausgew&auml;hlten Kanten hinzugef&uuml;gt.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
@@ -127,15 +125,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195318
+Cached time: 20260111195643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.219 seconds
-Preprocessor visited node count: 316/1000000
-Post&#8208;expand include size: 27933/2097152 bytes
-Template argument size: 11166/2097152 bytes
+CPU time usage: 0.076 seconds
+Real time usage: 0.162 seconds
+Preprocessor visited node count: 315/1000000
+Post&#8208;expand include size: 27909/2097152 bytes
+Template argument size: 11142/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -143,18 +141,18 @@ Unstrip post&#8208;expand size: 1710/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.056      1 -total
- 27.05%    6.778      1 Template:TechDraw_Tools_navi/de
- 25.00%    6.263      1 Template:GuiCommand/de
- 15.73%    3.942      2 Template:Navigation_menu_2
- 13.61%    3.410      2 Template:Docnav/de
- 12.40%    3.107      1 Template:Userdocnavi/de
-  8.66%    2.169      1 Template:Caption
-  5.89%    1.475      2 Template:Button
-  4.59%    1.151      1 Template:MenuCommand
+100.00%   42.532      1 -total
+ 26.15%   11.121      1 Template:TechDraw_Tools_navi/de
+ 22.15%    9.419      1 Template:Caption
+ 15.34%    6.525      2 Template:Navigation_menu_2
+ 11.23%    4.777      2 Template:Button
+ 10.94%    4.655      1 Template:MenuCommand
+  7.80%    3.319      2 Template:Docnav/de
+  7.70%    3.276      1 Template:GuiCommand/de
+  7.59%    3.228      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177750-0!canonical and timestamp 20260111195317 and revision id 1735920. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177750-0!canonical and timestamp 20260111195642 and revision id 1735946. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
