Created page with "Siehe [[TechDraw_FaceCenterLine/de#Notes|TechDraw FlächenMittellinie]]."

--- a/wiki/de/TechDraw_2LineCenterLine.html
+++ b/wiki/de/TechDraw_2LineCenterLine.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw 2LineCenterLine/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+2LineCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_2LineCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2LineCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ligne centrale entre 2 lignes (80% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea centrale tra 2 linee (80% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -76,7 +76,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<p>See <a href="../TechDraw_FaceCenterLine.html#Notes" title="TechDraw FaceCenterLine">TechDraw FaceCenterLine</a>.
+<p>Siehe <a href="../de/TechDraw_FaceCenterLine.html#Notes" title="TechDraw FaceCenterLine/de">TechDraw Fl&auml;chenMittellinie</a>.
 </p><p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
@@ -125,34 +125,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195708
+Cached time: 20260111195757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.154 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.142 seconds
 Preprocessor visited node count: 315/1000000
 Post&#8208;expand include size: 27909/2097152 bytes
 Template argument size: 11142/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1710/5000000 bytes
+Unstrip post&#8208;expand size: 1714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.513      1 -total
- 41.13%   12.960      1 Template:TechDraw_Tools_navi/de
- 26.71%    8.418      2 Template:Navigation_menu_2
- 18.86%    5.944      1 Template:Userdocnavi/de
- 13.19%    4.158      1 Template:Caption
-  7.77%    2.449      2 Template:Docnav/de
-  7.23%    2.278      1 Template:GuiCommand/de
-  5.41%    1.706      1 Template:MenuCommand
-  4.15%    1.307      2 Template:Button
+100.00%   24.832      1 -total
+ 30.21%    7.502      1 Template:TechDraw_Tools_navi/de
+ 18.59%    4.616      2 Template:Navigation_menu_2
+ 14.75%    3.662      1 Template:GuiCommand/de
+ 14.48%    3.596      2 Template:Docnav/de
+ 13.42%    3.332      1 Template:Userdocnavi/de
+  8.80%    2.184      1 Template:Caption
+  8.33%    2.068      1 Template:MenuCommand
+  6.89%    1.712      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177750-0!canonical and timestamp 20260111195708 and revision id 1735948. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177750-0!canonical and timestamp 20260111195757 and revision id 1735950. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
