Created page with "|Pan_text=Podržte prostřední tlačítko myši a přesuňte ukazatel."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -157,10 +157,8 @@
 <p>P&#345;i t&eacute;to metod&#283; lze prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i uvolnit pot&eacute;, co je stisknuto prav&eacute; tla&#269;&iacute;tko my&scaron;i.
 </p><p>U&#382;ivatel&eacute;, kte&#345;&iacute; pou&#382;&iacute;vaj&iacute; my&scaron; pravou rukou, mohou tuto metodu pova&#382;ovat za jednodu&scaron;&scaron;&iacute; ne&#382; prvn&iacute; metodu.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the middle mouse button, then move the pointer.
-
+</td>
+<td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr style="text-align:center;">
@@ -1183,15 +1181,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195640
+Cached time: 20260111195807
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.327 seconds
-Real time usage: 0.755 seconds
-Preprocessor visited node count: 1672/1000000
-Post&#8208;expand include size: 78666/2097152 bytes
-Template argument size: 28467/2097152 bytes
+CPU time usage: 0.363 seconds
+Real time usage: 0.623 seconds
+Preprocessor visited node count: 1671/1000000
+Post&#8208;expand include size: 78618/2097152 bytes
+Template argument size: 28419/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1199,19 +1197,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  203.836      1 -total
- 14.11%   28.767      8 Template:ASCII
-  8.46%   17.236     78 Template:KEY
-  6.48%   13.208      1 Template:Inventor_Navigation/cs
-  6.37%   12.982      1 Template:CAD_Navigation
-  6.11%   12.446      1 Template:Userdocnavi/cs
-  5.38%   10.974      1 Template:OpenSCAD_Navigation
-  5.13%   10.464      1 Template:MayaGesture_Navigation
-  4.15%    8.452      1 Template:Blender_Navigation
-  3.86%    7.865      1 Template:OpenCascade_Navigation
+100.00%  116.333      1 -total
+ 14.39%   16.743      1 Template:Userdocnavi/cs
+  9.29%   10.802      1 Template:Navigation_menu_2
+  8.24%    9.591      8 Template:ASCII
+  7.32%    8.517      1 Template:OpenSCAD_Navigation
+  6.60%    7.677      1 Template:TinkerCAD_Navigation
+  5.65%    6.574      1 Template:Gesture_Navigation
+  4.99%    5.808      1 Template:SolidWorks_Navigation
+  4.99%    5.802      1 Template:Touchpad_Navigation/cs
+  4.58%    5.331      1 Template:SiemensNX_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195639 and revision id 1735944. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195806 and revision id 1735952. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
