--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -159,8 +159,7 @@
 </p>
 </td>
 <td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr style="text-align:center;">
 <td>
 </td>
@@ -175,8 +174,7 @@
 <tr style="vertical-align:top;">
 <td>
 </td>
-<td style="background:#efffef;">Zoom mode: hold the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> keys, press the right mouse button once, then move the pointer.
-
+<td style="background:#efffef;">Re&#382;im p&#345;ibl&iacute;&#382;en&iacute;: podr&#382;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>, stiskn&#283;te jednou prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td style="background:#efffef;">Rotate mode: hold the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> key, press the right mouse button once, then move the pointer.
@@ -1181,15 +1179,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195807
+Cached time: 20260111195941
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.363 seconds
-Real time usage: 0.623 seconds
-Preprocessor visited node count: 1671/1000000
-Post&#8208;expand include size: 78618/2097152 bytes
-Template argument size: 28419/2097152 bytes
+CPU time usage: 0.358 seconds
+Real time usage: 0.558 seconds
+Preprocessor visited node count: 1670/1000000
+Post&#8208;expand include size: 78588/2097152 bytes
+Template argument size: 28389/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1197,19 +1195,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  116.333      1 -total
- 14.39%   16.743      1 Template:Userdocnavi/cs
-  9.29%   10.802      1 Template:Navigation_menu_2
-  8.24%    9.591      8 Template:ASCII
-  7.32%    8.517      1 Template:OpenSCAD_Navigation
-  6.60%    7.677      1 Template:TinkerCAD_Navigation
-  5.65%    6.574      1 Template:Gesture_Navigation
-  4.99%    5.808      1 Template:SolidWorks_Navigation
-  4.99%    5.802      1 Template:Touchpad_Navigation/cs
-  4.58%    5.331      1 Template:SiemensNX_Navigation
+100.00%  106.349      1 -total
+ 12.61%   13.413      1 Template:TOCright
+ 10.50%   11.172      8 Template:ASCII
+  9.16%    9.746      1 Template:Userdocnavi/cs
+  5.51%    5.865      1 Template:OpenSCAD_Navigation
+  5.04%    5.361      1 Template:MayaGesture_Navigation
+  4.73%    5.029      2 Template:Docnav
+  4.42%    4.698     78 Template:KEY
+  4.31%    4.588      1 Template:Gesture_Navigation
+  3.84%    4.086      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195806 and revision id 1735952. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195941 and revision id 1735954. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
