--- a/wiki/de/TechDraw_2PointCenterLine.html
+++ b/wiki/de/TechDraw_2PointCenterLine.html
@@ -3,7 +3,7 @@
 <li><a href="../TechDraw_2PointCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PointCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ligne centrale entre 2 points (80% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea centrale tra 2 punti (80% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwoma punktami (80% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwoma punktami (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2 &#1090;&#1086;&#1095;&#1082;&#1072;&#1084;&#1080;" (27% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; 2&#51216;&#44036; &#51473;&#49900;&#49440; (80% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Linien Hinzuf&uuml;gen &rarr; Mittellinie zwischen 2 Punkten hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Linien Hinzuf&uuml;gen &rarr; Mittellinie zwischen 2 Punkten
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -129,34 +127,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145931
+Cached time: 20260111195943
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.105 seconds
-Preprocessor visited node count: 317/1000000
-Post&#8208;expand include size: 27972/2097152 bytes
-Template argument size: 11206/2097152 bytes
+CPU time usage: 0.095 seconds
+Real time usage: 0.155 seconds
+Preprocessor visited node count: 316/1000000
+Post&#8208;expand include size: 27948/2097152 bytes
+Template argument size: 11182/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1713/5000000 bytes
+Unstrip post&#8208;expand size: 1718/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.796      1 -total
- 28.05%    6.956      1 Template:TechDraw_Tools_navi/de
- 16.22%    4.021      1 Template:Caption
- 16.08%    3.987      2 Template:Navigation_menu_2
- 16.01%    3.970      1 Template:GuiCommand/de
- 12.78%    3.168      2 Template:Docnav/de
-  8.78%    2.178      1 Template:Userdocnavi/de
-  7.56%    1.874      1 Template:MenuCommand
-  7.36%    1.826      2 Template:Button
+100.00%   27.708      1 -total
+ 39.44%   10.928      1 Template:TechDraw_Tools_navi/de
+ 19.96%    5.530      2 Template:Navigation_menu_2
+ 13.10%    3.629      2 Template:Docnav/de
+ 10.60%    2.937      1 Template:GuiCommand/de
+ 10.59%    2.934      1 Template:Userdocnavi/de
+ 10.57%    2.929      1 Template:Caption
+  7.26%    2.013      1 Template:MenuCommand
+  5.72%    1.586      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177752-0!canonical and timestamp 20260111145931 and revision id 1734485. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177752-0!canonical and timestamp 20260111195942 and revision id 1735956. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
