--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -168,8 +168,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/de">'&#9633;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Vierkantsymbol (&#9633;) am Anfang des Ma&szlig;textes ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/de">Anzahl-Pr&auml;fix 'n&times;' einf&uuml;gen</a>: F&uuml;gt einen Multiplikator am Anfang des Ma&szlig;textes ein, der angibt, wie oft das zu diesem Ma&szlig; geh&ouml;rende Geometrieelement in der Ansicht vorkommt. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixChar.svg&amp;filetimestamp=20240707203715&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixChar.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/de">Pr&auml;fixsymbol entfernen</a>: Entfernt alle Symbole am Anfang des Ma&szlig;textes.</li></ul>
-<ul><li><span id="TechDraw_ExtensionIncreaseDecreaseGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/de">Increase Decimal Places</a>: increases the number of decimal places of the dimension text.</span></li></ul>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/de">Dezimalstellenanzahl erh&ouml;hen</a>: Erh&ouml;ht die Anzahl der Nachkommastellen der Ma&szlig;zahl.</li></ul></dd></dl>
+<ul><li><span id="TechDraw_ExtensionIncreaseDecreaseGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/de">Dezimalstellenanzahl erh&ouml;hen</a>: Erh&ouml;ht die Anzahl der Nachkommastellen der Ma&szlig;zahl.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDecreaseDecimal.svg&amp;filetimestamp=20241126181948&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/de">Dezimalstellenanzahl verringern</a>: verringert die Anzahl der Nachkommastellen der Ma&szlig;zahl.</li></ul>
 <p><span id="Annotations"></span>
 </p>
@@ -308,13 +307,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195620
+Cached time: 20260111200003
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.319 seconds
-Real time usage: 0.487 seconds
-Preprocessor visited node count: 874/1000000
+CPU time usage: 0.459 seconds
+Real time usage: 0.857 seconds
+Preprocessor visited node count: 872/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -324,18 +323,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.323      1 -total
- 29.77%    7.538      1 Template:TechDraw_Tools_navi/de
- 16.07%    4.070      2 Template:Navigation_menu_2
- 15.24%    3.860      1 Template:Userdocnavi/de
- 11.80%    2.987      2 Template:Docnav/de
- 10.18%    2.577     25 Template:Version/de
-  8.70%    2.202      5 Template:VersionPlus/de
-  7.18%    1.817      1 Template:TOCright
-  5.76%    1.459      1 Template:KEY
+100.00%   60.561      1 -total
+ 30.76%   18.629      1 Template:TechDraw_Tools_navi/de
+ 20.30%   12.295      5 Template:VersionPlus/de
+ 11.95%    7.240      2 Template:Navigation_menu_2
+ 11.12%    6.732      2 Template:Docnav/de
+  9.39%    5.688     25 Template:Version/de
+  8.97%    5.432      1 Template:Userdocnavi/de
+  6.08%    3.683      1 Template:TOCright
+  5.89%    3.569      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111195620 and revision id 1735942. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200002 and revision id 1735958. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
