Created page with "|Rotate_view_mode_text=Režim otáčení: podržte klávesu {{KEY|Shift}}, stiskněte jednou pravé tlačítko myši a poté přesuňte ukazatel."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -175,10 +175,8 @@
 <td>
 </td>
 <td style="background:#efffef;">Re&#382;im p&#345;ibl&iacute;&#382;en&iacute;: podr&#382;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>, stiskn&#283;te jednou prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td style="background:#efffef;">Rotate mode: hold the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> key, press the right mouse button once, then move the pointer.
-
+</td>
+<td style="background:#efffef;">Re&#382;im ot&aacute;&#269;en&iacute;: podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>, stiskn&#283;te jednou prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>
@@ -1179,15 +1177,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195941
+Cached time: 20260111200028
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.358 seconds
-Real time usage: 0.558 seconds
-Preprocessor visited node count: 1670/1000000
-Post&#8208;expand include size: 78588/2097152 bytes
-Template argument size: 28389/2097152 bytes
+CPU time usage: 0.401 seconds
+Real time usage: 0.646 seconds
+Preprocessor visited node count: 1669/1000000
+Post&#8208;expand include size: 78555/2097152 bytes
+Template argument size: 28356/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1195,19 +1193,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  106.349      1 -total
- 12.61%   13.413      1 Template:TOCright
- 10.50%   11.172      8 Template:ASCII
-  9.16%    9.746      1 Template:Userdocnavi/cs
-  5.51%    5.865      1 Template:OpenSCAD_Navigation
-  5.04%    5.361      1 Template:MayaGesture_Navigation
-  4.73%    5.029      2 Template:Docnav
-  4.42%    4.698     78 Template:KEY
-  4.31%    4.588      1 Template:Gesture_Navigation
-  3.84%    4.086      2 Template:Button
+100.00%  109.942      1 -total
+ 13.14%   14.445      1 Template:Userdocnavi/cs
+  7.28%    7.998      8 Template:ASCII
+  6.40%    7.033      1 Template:CAD_Navigation
+  5.65%    6.217      1 Template:SolidWorks_Navigation
+  5.60%    6.152      1 Template:Blender_Navigation
+  5.55%    6.106      1 Template:MayaGesture_Navigation
+  5.30%    5.823      1 Template:Inventor_Navigation/cs
+  4.82%    5.296      1 Template:OpenSCAD_Navigation
+  4.62%    5.079      1 Template:Revit_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195941 and revision id 1735954. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200028 and revision id 1735960. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
