--- a/wiki/de/TechDraw_2PointCenterLine.html
+++ b/wiki/de/TechDraw_2PointCenterLine.html
@@ -62,15 +62,13 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Zwei Punkte in einer Ansicht ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Mittellinie zwischen 2 Punkten hinzuf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Mittellinie zwischen 2 Punkten hinzuf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
-<li>Ein Aufgaben-Bereich wird ge&ouml;ffnet. Siehe <a href="../de/TechDraw_FaceCenterLine.html#Optionen" title="TechDraw FaceCenterLine/de">TechDraw Fl&auml;chenMittellinie</a> f&uuml;r weitere Informationen.</li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Mittellinie zwischen 2 Punkten</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Mittellinie zwischen 2 Punkten</b> ausw&auml;hlen.</li></ul></li>
+<li>Das Aufgaben-Fenster wird ge&ouml;ffnet. Siehe <a href="../de/TechDraw_FaceCenterLine.html#Options" title="TechDraw FaceCenterLine/de">TechDraw Fl&auml;chenMittellinie</a> f&uuml;r weitere Informationen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> zum Best&auml;tigen dr&uuml;cken.</li>
 <li>Eine Mittellinie wird zwischen den ausgew&auml;hlten Punkten hinzugef&uuml;gt.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
@@ -127,15 +125,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195943
+Cached time: 20260111200047
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.155 seconds
-Preprocessor visited node count: 316/1000000
-Post&#8208;expand include size: 27948/2097152 bytes
-Template argument size: 11182/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.147 seconds
+Preprocessor visited node count: 315/1000000
+Post&#8208;expand include size: 27924/2097152 bytes
+Template argument size: 11158/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -143,18 +141,18 @@ Unstrip post&#8208;expand size: 1718/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.708      1 -total
- 39.44%   10.928      1 Template:TechDraw_Tools_navi/de
- 19.96%    5.530      2 Template:Navigation_menu_2
- 13.10%    3.629      2 Template:Docnav/de
- 10.60%    2.937      1 Template:GuiCommand/de
- 10.59%    2.934      1 Template:Userdocnavi/de
- 10.57%    2.929      1 Template:Caption
-  7.26%    2.013      1 Template:MenuCommand
-  5.72%    1.586      2 Template:Button
+100.00%   39.166      1 -total
+ 31.84%   12.472      1 Template:TechDraw_Tools_navi/de
+ 20.58%    8.062      2 Template:Navigation_menu_2
+ 14.13%    5.533      1 Template:GuiCommand/de
+ 12.96%    5.077      1 Template:Userdocnavi/de
+ 11.98%    4.691      2 Template:Docnav/de
+  9.81%    3.842      1 Template:Caption
+  8.51%    3.332      1 Template:MenuCommand
+  8.05%    3.153      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177752-0!canonical and timestamp 20260111195942 and revision id 1735956. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177752-0!canonical and timestamp 20260111200047 and revision id 1735964. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
