--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -177,13 +177,11 @@
 <td style="background:#efffef;">Re&#382;im p&#345;ibl&iacute;&#382;en&iacute;: podr&#382;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>, stiskn&#283;te jednou prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </td>
 <td style="background:#efffef;">Re&#382;im ot&aacute;&#269;en&iacute;: podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>, stiskn&#283;te jednou prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
+</td>
 <td>
 </td>
-<td style="background:#efffef;">Pan mode: hold the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> key, press the right mouse button once, then move the pointer.
+<td style="background:#efffef;">Re&#382;im posunu: podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>, stiskn&#283;te jednou prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </td></tr></tbody></table>
-
 <p><span id="Gesture_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Navigace_gesty">Navigace gesty</span></h3>
@@ -1177,15 +1175,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200028
+Cached time: 20260111200115
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.401 seconds
-Real time usage: 0.646 seconds
-Preprocessor visited node count: 1669/1000000
-Post&#8208;expand include size: 78555/2097152 bytes
-Template argument size: 28356/2097152 bytes
+CPU time usage: 0.360 seconds
+Real time usage: 0.506 seconds
+Preprocessor visited node count: 1668/1000000
+Post&#8208;expand include size: 78528/2097152 bytes
+Template argument size: 28329/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1193,19 +1191,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  109.942      1 -total
- 13.14%   14.445      1 Template:Userdocnavi/cs
-  7.28%    7.998      8 Template:ASCII
-  6.40%    7.033      1 Template:CAD_Navigation
-  5.65%    6.217      1 Template:SolidWorks_Navigation
-  5.60%    6.152      1 Template:Blender_Navigation
-  5.55%    6.106      1 Template:MayaGesture_Navigation
-  5.30%    5.823      1 Template:Inventor_Navigation/cs
-  4.82%    5.296      1 Template:OpenSCAD_Navigation
-  4.62%    5.079      1 Template:Revit_Navigation
+100.00%  115.811      1 -total
+ 12.23%   14.164      1 Template:Userdocnavi/cs
+ 10.75%   12.454      8 Template:ASCII
+  7.99%    9.257      1 Template:OpenSCAD_Navigation
+  7.37%    8.532      1 Template:OpenCascade_Navigation
+  4.20%    4.862      1 Template:Touchpad_Navigation
+  4.09%    4.733      2 Template:OpenInventor_Navigation
+  4.08%    4.725      1 Template:Inventor_Navigation/cs
+  3.96%    4.587      1 Template:Touchpad_Navigation/cs
+  3.84%    4.449      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200028 and revision id 1735960. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200114 and revision id 1735969. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
