--- a/wiki/de/TechDraw_2PointCenterLine.html
+++ b/wiki/de/TechDraw_2PointCenterLine.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw 2PointCenterLine/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+2PointCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_2PointCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PointCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ligne centrale entre 2 points (80% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea centrale tra 2 punti (80% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -76,7 +76,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<p>See <a href="../TechDraw_FaceCenterLine.html#Notes" title="TechDraw FaceCenterLine">TechDraw FaceCenterLine</a>.
+<p>Siehe <a href="../de/TechDraw_FaceCenterLine.html#Notes" title="TechDraw FaceCenterLine/de">TechDraw Fl&auml;chenMittellinie</a>.
 </p><p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
@@ -125,34 +125,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200106
+Cached time: 20260111200118
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.146 seconds
+CPU time usage: 0.089 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 315/1000000
 Post&#8208;expand include size: 27924/2097152 bytes
 Template argument size: 11158/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1718/5000000 bytes
+Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.315      1 -total
- 23.48%    7.586      1 Template:TechDraw_Tools_navi/de
- 16.87%    5.453      1 Template:MenuCommand
- 15.33%    4.955      1 Template:GuiCommand/de
- 14.19%    4.587      2 Template:Navigation_menu_2
- 12.63%    4.083      2 Template:Docnav/de
- 11.79%    3.810      1 Template:Userdocnavi/de
- 10.61%    3.428      1 Template:Caption
-  7.00%    2.262      2 Template:Button
+100.00%   33.903      1 -total
+ 31.94%   10.830      1 Template:TechDraw_Tools_navi/de
+ 18.35%    6.222      1 Template:Userdocnavi/de
+ 17.62%    5.975      1 Template:GuiCommand/de
+ 17.35%    5.882      2 Template:Docnav/de
+ 13.37%    4.532      2 Template:Navigation_menu_2
+  5.17%    1.754      1 Template:Caption
+  3.85%    1.307      2 Template:Button
+  3.32%    1.126      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177752-0!canonical and timestamp 20260111200106 and revision id 1735966. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177752-0!canonical and timestamp 20260111200118 and revision id 1735971. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
