Created page with "===Linien hinzufügen==="

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -177,7 +177,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_RichTextAnnotation.svg&amp;filetimestamp=20240710133312&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/de">Formatierten Beschriftungstext einf&uuml;gen</a>: F&uuml;gt einen formatierten Textblock als Beschriftungstext einer Hinweislinie oder einer Ansicht hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Balloon.svg&amp;filetimestamp=20241126214042&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Balloon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Balloon.html" title="TechDraw Balloon/de">Hinweisfeld einf&uuml;gen</a>: F&uuml;gt einer Zeichnung ein Hinweisfeld (Balloon) hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_AxoLengthDimension.svg&amp;filetimestamp=20241127175334&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_AxoLengthDimension.html" title="TechDraw AxoLengthDimension/de">Axonometrisches L&auml;ngenma&szlig;</a>: F&uuml;gt ein axonometrisches L&auml;ngenma&szlig; hinzu. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
-<h3><span class="mw-headline" id="Add_Lines">Add Lines</span></h3>
+<p><span id="Add_Lines"></span>
+</p>
+<h3><span id="Linien_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Linien_hinzuf&uuml;gen">Linien hinzuf&uuml;gen</span></h3>
 <div class="mw-translate-fuzzy">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie zur Ansicht hinzuf&uuml;gen</a>: F&uuml;gt einer Ansicht eine Hinweislinie hinzu.</li></ul>
 </div>
@@ -307,13 +309,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200033
+Cached time: 20260111200205
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.321 seconds
-Real time usage: 0.506 seconds
-Preprocessor visited node count: 872/1000000
+CPU time usage: 0.298 seconds
+Real time usage: 0.403 seconds
+Preprocessor visited node count: 873/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -323,18 +325,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.189      1 -total
- 33.09%    7.342      1 Template:TechDraw_Tools_navi/de
- 18.45%    4.094      1 Template:Userdocnavi/de
- 17.15%    3.805      2 Template:Navigation_menu_2
- 12.52%    2.779      2 Template:Docnav/de
-  8.50%    1.886     25 Template:Version/de
-  7.49%    1.661      5 Template:VersionPlus/de
-  5.33%    1.182      1 Template:TOCright
-  4.08%    0.906      1 Template:KEY
+100.00%   23.334      1 -total
+ 33.21%    7.749      1 Template:TechDraw_Tools_navi/de
+ 15.96%    3.724      2 Template:Navigation_menu_2
+ 14.79%    3.452      5 Template:VersionPlus/de
+ 12.77%    2.979     25 Template:Version/de
+ 10.87%    2.537      2 Template:Docnav/de
+ 10.53%    2.456      1 Template:Userdocnavi/de
+  4.56%    1.064      1 Template:TOCright
+  4.11%    0.959      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200033 and revision id 1735962. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200204 and revision id 1735973. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
