Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -180,9 +180,7 @@
 <p><span id="Add_Lines"></span>
 </p>
 <h3><span id="Linien_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Linien_hinzuf&uuml;gen">Linien hinzuf&uuml;gen</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie zur Ansicht hinzuf&uuml;gen</a>: F&uuml;gt einer Ansicht eine Hinweislinie hinzu.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a>: F&uuml;gt einer Ansicht eine Hinweislinie hinzu.</li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Mittellinie zu Fl&auml;chen hinzuf&uuml;gen</a>: F&uuml;gt ausgew&auml;hlten Fl&auml;chen eine Mittellinie hinzu.</li></ul></dd></dl>
 </div>
@@ -309,13 +307,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200205
+Cached time: 20260111200234
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.298 seconds
-Real time usage: 0.403 seconds
-Preprocessor visited node count: 873/1000000
+CPU time usage: 0.364 seconds
+Real time usage: 0.773 seconds
+Preprocessor visited node count: 872/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -325,18 +323,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.334      1 -total
- 33.21%    7.749      1 Template:TechDraw_Tools_navi/de
- 15.96%    3.724      2 Template:Navigation_menu_2
- 14.79%    3.452      5 Template:VersionPlus/de
- 12.77%    2.979     25 Template:Version/de
- 10.87%    2.537      2 Template:Docnav/de
- 10.53%    2.456      1 Template:Userdocnavi/de
-  4.56%    1.064      1 Template:TOCright
-  4.11%    0.959      1 Template:KEY
+100.00%   24.173      1 -total
+ 23.74%    5.739     25 Template:Version/de
+ 23.38%    5.652      1 Template:TechDraw_Tools_navi/de
+ 15.82%    3.825      2 Template:Navigation_menu_2
+ 14.82%    3.582      2 Template:Docnav/de
+  8.55%    2.066      1 Template:Userdocnavi/de
+  7.02%    1.698      5 Template:VersionPlus/de
+  6.94%    1.678      1 Template:TOCright
+  5.72%    1.382      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200204 and revision id 1735973. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200233 and revision id 1735975. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
